--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
