--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
+    "react-ui-cards": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.4",
     "tailwind-merge": "^3.3.1",
