--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
