--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.6.1",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-i18next": "^16.2.4",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-paginating": "^1.4.0",
