--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-slick": "^0.30.3",
     "react-ui-cards": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
