--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
+    "react-square-web-payments-sdk": "^3.2.4-beta.1",
     "react-ui-cards": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
